Implement unit tests

--- a/components/debug/CMakeLists.txt
+++ b/components/debug/CMakeLists.txt
@@ -10,6 +10,5 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include"
     PRIV_INCLUDE_DIRS "./include/debug"
-    REQUIRES app config
-#PRIV_REQUIRES
+   REQUIRES app_config
 )
