--- a/components/key_value_store/test/CMakeLists.txt
+++ b/components/key_value_store/test/CMakeLists.txt
@@ -12,6 +12,6 @@ idf_component_register(
     SRC_DIRS "."
     INCLUDE_DIRS "." ../include 
  #   PRIV_INCLUDE_DIRS ../include/key_value_store
-    REQUIRES app unity
+    REQUIRES unity
 )
                   
