--- a/test/esp32/components/app_config/CMakeLists.txt
+++ b/test/esp32/components/app_config/CMakeLists.txt
@@ -3,13 +3,11 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
 if(DEFINED ENV{DISTRO})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
 endif()
-
 if(DEFINED ENV{FLAVOR_LAN})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLAVOR_LAN")
 endif()
 
-idf_component_register(SRC_DIRS "."
-      INCLUDE_DIRS "." ../include 
-      PRIV_INCLUDE_DIRS ../ ../include/cli
-      PRIV_REQUIRES app_config cli userio unity)
-                            
+idf_component_register(
+    INCLUDE_DIRS . "./include"
+    REQUIRES misc txtio
+)
