--- a/test/esp32/components/config/CMakeLists.txt
+++ b/test/esp32/components/config/CMakeLists.txt
@@ -1,15 +1,18 @@
+set(srcs config.c)
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
 
 if(DEFINED ENV{DISTRO})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
 endif()
-
 if(DEFINED ENV{FLAVOR_LAN})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLAVOR_LAN")
 endif()
 
-idf_component_register(SRC_DIRS "."
-      INCLUDE_DIRS "." ../include 
-      PRIV_INCLUDE_DIRS ../ ../include/cli
-      PRIV_REQUIRES app_config cli userio unity)
-                            
+
+idf_component_register(SRCS ${srcs} 
+    INCLUDE_DIRS . "./include" 
+    PRIV_INCLUDE_DIRS "./include/config"
+    REQUIRES  app_config net
+    
+)
