--- a/test/esp32/components/setup/CMakeLists.txt
+++ b/test/esp32/components/setup/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs status_json.c) 
+#set(srcs inout.c esp32/txtio_setup.c) 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
 
@@ -8,6 +8,6 @@ endif()
 
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    PRIV_INCLUDE_DIRS "./include/userio" 
-    PRIV_REQUIRES app_config debug misc txtio
+    PRIV_INCLUDE_DIRS "./include/txtio" 
+    PRIV_REQUIRES misc app_config 
 )
