Remove dependencies to global config

--- a/components/debug/CMakeLists.txt
+++ b/components/debug/CMakeLists.txt
@@ -10,5 +10,5 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include"
     PRIV_INCLUDE_DIRS "./include/debug"
-   REQUIRES app_config
+   REQUIRES app_config txtio
 )
