--- a/components/net_http_server/CMakeLists.txt
+++ b/components/net_http_server/CMakeLists.txt
@@ -11,6 +11,6 @@ idf_component_register(
     INCLUDE_DIRS . "./include" 
     PRIV_INCLUDE_DIRS "./include/net/http/server" 
     REQUIRES  app_config
-    PRIV_REQUIRES  cli config debug userio
+    PRIV_REQUIRES  cli debug userio
                    esp_http_server mbedtls
  )
