Improve on/off ip-service/clients

--- a/components/cli/CMakeLists.txt
+++ b/components/cli/CMakeLists.txt
@@ -12,5 +12,5 @@ idf_component_register(SRCS ${srcs}
     INCLUDE_DIRS "./include"  
     PRIV_INCLUDE_DIRS "./include/cli"
     REQUIRES userio 
-    PRIV_REQUIRES app_config config debug misc txtio userio
+    PRIV_REQUIRES app_config  debug misc txtio userio
 )
