Add alternative cli-tcp-server as task

--- a/components/net/CMakeLists.txt
+++ b/components/net/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(srcs  ipnet.c 
-esp32/ethernet.c  esp32/ipnet.c  esp32/ntp.c  esp32/tcp_server.c  esp32/wifi_ap.c  esp32/wifistation.c) 
+esp32/ethernet.c  esp32/ipnet.c  esp32/ntp.c  esp32/tcp_server.c  esp32/tcp_cli_server_task.c esp32/wifi_ap.c  esp32/wifistation.c) 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
 
@@ -16,6 +16,6 @@ idf_component_register(
     INCLUDE_DIRS . "./include" 
     PRIV_INCLUDE_DIRS "./include/net" 
     REQUIRES ""
-    PRIV_REQUIRES app_config misc net_http_server txtio
+    PRIV_REQUIRES app_config misc net_http_server txtio cli
                   esp_netif esp_wifi esp_eth
  )
