--- a/components/cli/CMakeLists.txt
+++ b/components/cli/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(srcs cli.c 
- cmdline_get.c  cmdline_parse_json.c  cmdline_parse.c  cmdline_set.c cmdline_process.c
+ cmdline_get.c  cmdline_parse.c  cmdline_set.c cmdline_process.c
  esp32/mutex.c esp32/cli_task.c) 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
@@ -11,5 +11,5 @@ endif()
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS "./include"  
     REQUIRES userio 
-    PRIV_REQUIRES app_config  debug misc txtio userio
+    PRIV_REQUIRES app_config  debug misc txtio userio jsmn
 )
