Replace base64 module

--- a/components/nanopb/CMakeLists.txt
+++ b/components/nanopb/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(srcs 
-  nanopb/pb_common.h
+  nanopb/pb_common.c
   nanopb/pb_encode.c
   nanopb/pb_decode.c
 )
@@ -9,5 +9,5 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
 endif()
 
 idf_component_register(SRCS ${srcs} 
-    INCLUDE_DIRS "." #"./include" 
+    INCLUDE_DIRS "./nanopb" #"./include" 
 )
