Add new component

--- a/components/stm32/CMakeLists.txt
+++ b/components/stm32/CMakeLists.txt
@@ -1,11 +1,6 @@
-set(srcs esp32/stm32_bl.c  esp32/stm32.c  esp32/stm32_ota.c
+set(srcs esp32/stm32_bl.c  esp32/stm32.c  esp32/stm32_ota.cc
 )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
 
 idf_component_register(
     SRCS ${srcs} 
@@ -14,3 +9,5 @@ idf_component_register(
     PRIV_REQUIRES app_config net debug
                   spiffs
 )
+
+component_compile_options(-${component_compile_opts})
