--- a/components/firmware_update/CMakeLists.txt
+++ b/components/firmware_update/CMakeLists.txt
@@ -7,4 +7,4 @@ idf_component_register(SRCS ${srcs}
                   esp_https_ota app_update
 )
 
-component_compile_options(-${component_compile_opts})
+component_compile_options(${component_compile_opts})
