Fix build files

--- a/components/cli/test/CMakeLists.txt
+++ b/components/cli/test/CMakeLists.txt
@@ -11,5 +11,5 @@ endif()
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "." ../include 
                        PRIV_INCLUDE_DIRS ../ ../include/cli_app
-                       REQUIRES app unity txtio)
+                       REQUIRES app_misc unity txtio)
                             
