--- a/components/misc/CMakeLists.txt
+++ b/components/misc/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(srcs bcd.c  stof.c  sun.c esp32/itoa.c ftoa.c cstring_utils.cc esp32/mutex.cc)
 
 
-idf_component_register(SRCS ${srcs} 
+idf_component_register(SRCS ${srcs}
+    REQUIRES app_config
     PRIV_REQUIRES debug
     INCLUDE_DIRS "./include" 
 )
