--- a/components/txtio/test/CMakeLists.txt
+++ b/components/txtio/test/CMakeLists.txt
@@ -1,3 +1,5 @@
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "."
                        REQUIRES unity txtio)
+
+component_compile_options(${component_compile_opts})
