--- a/components/misc/CMakeLists.txt
+++ b/components/misc/CMakeLists.txt
@@ -7,4 +7,5 @@ idf_component_register(SRCS ${srcs}
     INCLUDE_DIRS "./include" 
 )
 
-component_compile_options(${component_compile_opts})
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
