--- a/components/net_http_server/CMakeLists.txt
+++ b/components/net_http_server/CMakeLists.txt
@@ -4,7 +4,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     REQUIRES  app_config esp_http_server
-    PRIV_REQUIRES  cli debug userio http_server_content
+    PRIV_REQUIRES  cli debug uout http_server_content
                     mbedtls
  )
  
