--- a/components/uout/CMakeLists.txt
+++ b/components/uout/CMakeLists.txt
@@ -8,6 +8,6 @@ endif()
 
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    PRIV_INCLUDE_DIRS "./include/userio" 
+    PRIV_INCLUDE_DIRS "./include/uout" 
     PRIV_REQUIRES app_config debug misc txtio
 )
