--- a/components/cli/CMakeLists.txt
+++ b/components/cli/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(srcs cli.cc
- cmdline_get.c  cmdline_parse.c  cmdline_set.c cmdline_process.c
+ cmdline_get.c  cmdline_parse.c  cmdline_set.c cmdline_process.cc
  mutex.cc esp32/cli_task.c) 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
