--- a/components/net_http_server/CMakeLists.txt
+++ b/components/net_http_server/CMakeLists.txt
@@ -4,8 +4,8 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     REQUIRES  app_config esp_http_server
-    PRIV_REQUIRES  cli debug uout http_server_content
-                    mbedtls
+    PRIV_REQUIRES  cli debug uout
+                    mbedtls #PRIV_ESP_IDF
  )
  
 component_compile_options(${comp_compile_opts})
