--- a/components/cli/test/CMakeLists.txt
+++ b/components/cli/test/CMakeLists.txt
@@ -10,6 +10,6 @@ endif()
 
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "." ../include 
-                       PRIV_INCLUDE_DIRS ../ ../include/cli_app
+                       PRIV_INCLUDE_DIRS ../ ../include/app_cli
                        REQUIRES app_misc unity txtio)
                             
