--- a/components/txtio/CMakeLists.txt
+++ b/components/txtio/CMakeLists.txt
@@ -1,13 +1,10 @@
 set(srcs inout.cc esp32/txtio_setup.cc txtio_mutex.cc) 
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
-
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
     PRIV_INCLUDE_DIRS "./include/txtio" 
     PRIV_REQUIRES misc app_config uout
 )
+
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
