--- a/components/config_kvs/CMakeLists.txt
+++ b/components/config_kvs/CMakeLists.txt
@@ -1,14 +1,4 @@
-set(srcs config_kvs.c config_comps.c)
-
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
-
-if(DEFINED ENV{FLAVOR_LAN})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLAVOR_LAN")
-endif()
+set(srcs config_kvs.cc config_comps.cc)
 
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
@@ -16,3 +6,6 @@ idf_component_register(SRCS ${srcs}
     REQUIRES  app_config txtio net_mqtt net net_http_server
     PRIV_REQUIRES key_value_store
     )
+    
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
