Refactor build files

--- a/components/config_kvs/CMakeLists.txt
+++ b/components/config_kvs/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(srcs config_kvs.cc config_comps.cc)
 
 idf_component_register(SRCS ${srcs} 
-    INCLUDE_DIRS . "./include" 
+    INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/config_kvs" 
     REQUIRES  app_config txtio net_mqtt net net_http_server
     PRIV_REQUIRES key_value_store
