--- a/components/debug/CMakeLists.txt
+++ b/components/debug/CMakeLists.txt
@@ -8,6 +8,6 @@ endif()
 
 idf_component_register(
     SRCS ${srcs} 
-    INCLUDE_DIRS . "./include"
+    INCLUDE_DIRS "./include"
    REQUIRES app_config txtio
 )
