--- a/components/net_mqtt/CMakeLists.txt
+++ b/components/net_mqtt/CMakeLists.txt
@@ -2,7 +2,7 @@ set(srcs  mqtt.cc esp32/mqtt.cc)
 
 idf_component_register(
     SRCS ${srcs} 
-    INCLUDE_DIRS . "./include" 
+    INCLUDE_DIRS "./include" 
     REQUIRES app_config
     PRIV_REQUIRES cli uout txtio
                   mqtt lwip #PRIV_ESP_IDF
