--- a/components/storage/CMakeLists.txt
+++ b/components/storage/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 
 idf_component_register(
     SRCS ${srcs} 
-    INCLUDE_DIRS . "./include" 
+    INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/storage" 
     PRIV_REQUIRES app_config debug txtio
                   spiffs #PRIV_ESP_IDF
