--- a/components/key_value_store/CMakeLists.txt
+++ b/components/key_value_store/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
 endif()
 
 idf_component_register(SRCS ${srcs} 
-    INCLUDE_DIRS . "./include" 
+    INCLUDE_DIRS "./include" 
     PRIV_REQUIRES app_config 
                   nvs_flash #PRIV_ESP_IDF
 )
