--- a/components/net_http_server/CMakeLists.txt
+++ b/components/net_http_server/CMakeLists.txt
@@ -2,7 +2,7 @@ set(srcs http_server.cc  esp32/http_server.cc)
 
 idf_component_register(
     SRCS ${srcs} 
-    INCLUDE_DIRS . "./include" 
+    INCLUDE_DIRS "./include" 
     REQUIRES  app_config esp_http_server
     PRIV_REQUIRES  cli debug uout
                     mbedtls #PRIV_ESP_IDF
