--- a/components/config_kvs/test/CMakeLists.txt
+++ b/components/config_kvs/test/CMakeLists.txt
@@ -1,16 +1,8 @@
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
-
-if(DEFINED ENV{FLAVOR_LAN})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLAVOR_LAN")
-endif()
-
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "." ../include 
                        REQUIRES app_misc txtio unity
                        PRIV_REQUIRES key_value_store net
 )
 
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
