--- a/components/key_value_store/test/CMakeLists.txt
+++ b/components/key_value_store/test/CMakeLists.txt
@@ -1,13 +1,3 @@
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
-
-if(DEFINED ENV{DISTRO})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
-endif()
-
-if(DEFINED ENV{FLAVOR_LAN})
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLAVOR_LAN")
-endif()
-
 idf_component_register(
     SRC_DIRS "."
     INCLUDE_DIRS "." ../include 
@@ -15,3 +5,5 @@ idf_component_register(
     REQUIRES unity
 )
                   
+component_compile_options(${comp_compile_opts})
+component_compile_features(${comp_compile_feats})
