--- a/components/misc/CMakeLists.txt
+++ b/components/misc/CMakeLists.txt
@@ -3,7 +3,7 @@ set(srcs bcd.c  stof.c  sun.c esp32/itoa.c ftoa.c cstring_utils.cc esp32/mutex.c
 
 idf_component_register(SRCS ${srcs}
     REQUIRES app_config
-    PRIV_REQUIRES debug
+    PRIV_REQUIRES dbg
     INCLUDE_DIRS "./include" 
 )
 
