--- a/components/cli/CMakeLists.txt
+++ b/components/cli/CMakeLists.txt
@@ -5,7 +5,7 @@ set(srcs cli.cc
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS "./include"  
     REQUIRES uout 
-    PRIV_REQUIRES app_config  dbg utils_misc txtio uout jsmn net_http_server
+    PRIV_REQUIRES app_config  utils_debug utils_misc txtio uout jsmn net_http_server
 )
 
 component_compile_options(${comp_compile_opts})
