--- a/components/storage/CMakeLists.txt
+++ b/components/storage/CMakeLists.txt
@@ -4,6 +4,6 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/storage" 
-    PRIV_REQUIRES app_config dbg txtio
+    PRIV_REQUIRES app_config utils_debug txtio
                   spiffs #PRIV_ESP_IDF
  )
