--- a/components/stm32/CMakeLists.txt
+++ b/components/stm32/CMakeLists.txt
@@ -6,7 +6,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
     REQUIRES ""  
-    PRIV_REQUIRES app_config net dbg
+    PRIV_REQUIRES app_config net utils_debug
                   spiffs #PRIV_ESP_IDF
 )
 
