--- a/components/cli/test/CMakeLists.txt
+++ b/components/cli/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "." ../include 
                        PRIV_INCLUDE_DIRS ../ ../include/app_cli
-                       REQUIRES app_misc unity txtio)
+                       REQUIRES app_misc app_settings unity txtio)
            
 component_compile_options(${comp_compile_opts})
 component_compile_features(${comp_compile_feats})                
