--- a/components/key_value_store/CMakeLists.txt
+++ b/components/key_value_store/CMakeLists.txt
@@ -2,7 +2,7 @@ set(srcs esp32/kvs_implementation.c)
 
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
-    PRIV_REQUIRES app_config 
+    PRIV_REQUIRES app_config utils_debug 
                   nvs_flash #PRIV_ESP_IDF
 )
 
