--- a/components/stm32/CMakeLists.txt
+++ b/components/stm32/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs esp32/stm32_bl.c  esp32/stm32.c  esp32/stm32_ota.cc
+set(srcs esp32/stm32_bl.c  esp32/stm32.c  esp32/stm32_ota.cc  esp32/mutex.cc
 )
 
 
@@ -6,7 +6,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
     REQUIRES ""  
-    PRIV_REQUIRES app_config net utils_debug
+    PRIV_REQUIRES app_config net utils_debug utils_misc
                   spiffs #PRIV_ESP_IDF
 )
 
