--- a/components/txtio/CMakeLists.txt
+++ b/components/txtio/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(SRCS ${srcs}
     INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/txtio" 
     PRIV_REQUIRES utils_misc app_config uout
+                  driver vfs #PRIV_ESP_IDF
 )
 
 component_compile_options(${comp_compile_opts})
