--- a/components/cli/CMakeLists.txt
+++ b/components/cli/CMakeLists.txt
@@ -6,6 +6,7 @@ idf_component_register(SRCS ${srcs}
     INCLUDE_DIRS "./include"  
     REQUIRES uout 
     PRIV_REQUIRES app_config  utils_debug utils_misc txtio uout jsmn net_http_server
+                  esp_event  #PRIV_ESP_IDF
 )
 
 component_compile_options(${comp_compile_opts})
