--- a/components/firmware_update/CMakeLists.txt
+++ b/components/firmware_update/CMakeLists.txt
@@ -4,7 +4,7 @@ set(srcs esp32/ota.cc)
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS "./include"
     PRIV_REQUIRES app_config txtio utils_misc
-                  esp_https_ota app_update
+                  esp_https_ota app_update esp_wifi  #PRIV_ESP_IDF
 )
 
 component_compile_options(${comp_compile_opts})
