Clean up code and build files

--- a/components/config_kvs/CMakeLists.txt
+++ b/components/config_kvs/CMakeLists.txt
@@ -4,7 +4,7 @@ idf_component_register(SRCS ${srcs}
     INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/config_kvs" 
     REQUIRES  app_config utils_misc 
-    PRIV_REQUIRES key_value_store app_settings txtio net_mqtt net net_http_server app_uout
+    PRIV_REQUIRES key_value_store txtio net_mqtt net net_http_server uout
     )
     
 component_compile_options(${comp_compile_opts})
