--- a/components/storage/CMakeLists.txt
+++ b/components/storage/CMakeLists.txt
@@ -4,7 +4,7 @@ idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/storage" 
-    PRIV_REQUIRES app_config utils_debug txtio
+    PRIV_REQUIRES  utils_debug txtio
                   spiffs #PRIV_ESP_IDF
  )
 
