--- a/components/config_kvs/test/CMakeLists.txt
+++ b/components/config_kvs/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "." ../include 
-                       REQUIRES app_misc txtio unity app_config
+                       REQUIRES txtio unity app_config
                        PRIV_REQUIRES key_value_store net
 )
 
