--- a/components/key_value_store/CMakeLists.txt
+++ b/components/key_value_store/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs esp32/kvs_implementation.c) 
+set(srcs esp32/kvs_implementation.cc) 
 
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
