--- a/weather/CMakeLists.txt
+++ b/weather/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs esp32/weather.cc weather.cc openweathermap.cc)
+set(srcs esp32/weather.cc weather.cc openweathermap.cc weather_irrigation.cc)
 
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS "./include"
