Improve debug logging

--- a/weather/Kconfig
+++ b/weather/Kconfig
@@ -1,17 +1,15 @@
-menu "Wather data retreival from OpenWeatherMap"
+menu "zwiebert: weather"
 
-config OPENWEATHERMAP_URL_STRING
+  config WEATHER_OWM_URL_STRING
     string "OpenWeatherMap URL string"
-	default "http://api.openweathermap.org/data/2.5/weather?q=Berlin&APPID=12345678901234567890123456789012"
-	help
-	  This URL contains location and API key obtained from 'https://home.openweathermap.org/' site.
+    default "http://api.openweathermap.org/data/2.5/weather?q=Berlin&APPID=12345678901234567890123456789012"
+	  help
+	   This URL contains location and API key obtained from 'https://home.openweathermap.org/' site.
 		
 		You need to set up a free account on this site first.
-		
-config HOST_SAVE_FOLDER
-    string "Folder to save periodic retrieved weather data"
-  default "/tmp"
-  help
-    For simulation whiel developing, or should I better use the simulated kvs-storage?
-
+   
+  config WEATHER_TEST_DEBUG
+    bool "Enable debug messages"
+    default n
+    
 endmenu
