--- a/stm32/CMakeLists.txt
+++ b/stm32/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs esp32/stm32_bl.c  esp32/stm32.c  esp32/stm32_ota.cc  esp32/mutex.cc
+set(srcs esp32/stm32_bl.cc  esp32/stm32.cc  esp32/stm32_ota.cc  esp32/mutex.cc
 )
 
 
