--- a/config_kvs/CMakeLists.txt
+++ b/config_kvs/CMakeLists.txt
@@ -4,7 +4,7 @@ idf_component_register(SRCS ${srcs}
     INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/config_kvs" 
     REQUIRES   utils_misc app_config
-    PRIV_REQUIRES key_value_store txtio net_mqtt net net_http_server uout
+    PRIV_REQUIRES key_value_store txtio net_mqtt net net_http_server uout stm32
     )
 
 component_compile_options(${comp_compile_opts})
