--- a/config_kvs/CMakeLists.txt
+++ b/config_kvs/CMakeLists.txt
@@ -1,10 +1,10 @@
-set(srcs config_kvs.cc config_comps.cc comp_settings.cc)
+set(srcs config_kvs.cc comp_settings.cc)
 
 idf_component_register(SRCS ${srcs} 
     INCLUDE_DIRS "./include" 
     PRIV_INCLUDE_DIRS "./include/config_kvs" 
     REQUIRES   utils_misc app_config
-    PRIV_REQUIRES key_value_store txtio net_mqtt net net_http_server uout stm32
+    PRIV_REQUIRES key_value_store uout 
     )
 
 component_compile_options(${comp_compile_opts})
