--- a/config_kvs/Kconfig
+++ b/config_kvs/Kconfig
@@ -1,5 +1,9 @@
 menu "zwiebert: config_kvs"
 
+    config CONFIG_KVS_HAVE_COMPONENT
+      bool
+      default y
+
     config APP_CFG_NAMESPACE
         string "Namespace for kvs settings storage"
         default "Settings"
