--- a/config_kvs/test/CMakeLists.txt
+++ b/config_kvs/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "." ../include 
-                       REQUIRES txtio unity app_config
-                       PRIV_REQUIRES key_value_store net
+                       REQUIRES txtio config_kvs uout  unity app_config
+                       PRIV_REQUIRES key_value_store
 )
 
 component_compile_options(${comp_compile_opts})
