--- a/kvs/test/CMakeLists.txt
+++ b/kvs/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 idf_component_register(
     SRC_DIRS "."
     INCLUDE_DIRS "." ../include 
- #   PRIV_INCLUDE_DIRS ../include/key_value_store
-    REQUIRES unity key_value_store
+ #   PRIV_INCLUDE_DIRS ../include/kvs
+    REQUIRES unity kvs
 )
 
 component_compile_options(${comp_compile_opts})
