Rename: net_mqtt_client

--- a/_test_/components/main/CMakeLists.txt
+++ b/_test_/components/main/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 idf_component_register(
     SRCS ""
-    REQUIRES  cli config_kvs firmware_update jsmn kvs main_loop nanopb net net_http_server net_mqtt stm32 storage test_host txtio uout utils_debug utils_misc utils_time weather
+    REQUIRES  cli config_kvs firmware_update jsmn kvs main_loop nanopb net net_http_server net_mqtt_client stm32 storage test_host txtio uout utils_debug utils_misc utils_time weather
     )
 
 
