Make component usable w/o esp-idf

--- a/jsmn/CMakeLists.txt
+++ b/jsmn/CMakeLists.txt
@@ -1,9 +1,20 @@
+cmake_minimum_required(VERSION 3.16)
+
 set(srcs jsmn.c)
+set(incd ./include)
 
 if(DEFINED ENV{DISTRO})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISTRIBUTION")
 endif()
 
-idf_component_register(SRCS ${srcs} 
-    INCLUDE_DIRS "./include" 
+
+if(COMMAND idf_component_register)
+idf_component_register(SRCS ${srcs}
+    INCLUDE_DIRS ${incd}
 )
+
+else()
+add_library(jsmn STATIC ${srcs})
+target_include_directories(jsmn PUBLIC ${incd})
+
+endif()
