--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -1,5 +1,4 @@
 set(srcs  ipnet.cc
-esp32/ethernet.cc
 esp32/ipnet.c  esp32/ntp.cc
 # esp32/tcp_server.cc
   esp32/tcp_cli_server_task.cc esp32/wifi_ap.cc
@@ -9,8 +8,11 @@ if(TEST_HOST)
   list(APPEND srcs host/http_client.cc)
 endif()
 
-if(CONFIG_APP_USE_WLAN)
+if(DEFINED CONFIG_APP_USE_WLAN)
   list(APPEND srcs esp32/wifistation.cc)
+endif()
+if(DEFINED CONFIG_APP_USE_LAN)
+  list(APPEND srcs esp32/ethernet.cc)
 endif()
 
 idf_component_register(
